# emcu

./: CMakeLists.txt  LICENSE  README.md  main.cpp
arch/: Architecture.cpp  Architecture.h  Register.cpp  Register.h
arch/arches/: AVR8.cpp  AVR8.h
board/: Board.cpp  Board.h
board/mcu/: MCU.cpp  MCU.h
peripheral/: Peripheral.cpp  Peripheral.h  Terminal.cpp  Terminal.h
